feat(backend): 集成jest+swc
